python/testData/highlighting/exceptionGroupInTupleInExceptStar.py
try:
    ...
except* (TypeError, <error descr="ExceptionGroup cannot be used in except*">ExceptionGroup</error>):
    pass